Fixed the footer spacing

--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -17,7 +17,7 @@
 
 .footer__content {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   /* border: solid red; */
   margin-bottom: 108px;
 }
